--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <script>
         // Your JavaScript goes here!
-        console.log("Hello, World!")
+            console.log(23+97)
     </script>
     </body>
 </html>
